[tool.poetry]
name = "cg2all"
version = "0.7"
description = "Convert coarse-grained protein structure to all-atom structure"
authors = [
    "Lim Heo <huhlim@gmail.com>",
    "Michael Feig <feiglab@gmail.com>",
]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/huhlim/cg2all"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.11"
dgl = "^0.9"
e3nn = "^0.5"
ml-collections = "^0.1.1"
numpy = "^1.23"
mdtraj = {git = "https://github.com/huhlim/mdtraj.git"}

[tool.poetry.group.dev.dependencies]
tqdm = "^4.64.1"
pytorch-lightning = "^1.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
