[tool.poetry]
name = "cg2all"
version = "1.2.0"
description = "Convert coarse-grained protein structure to all-atom structure"
authors = [
    "Lim Heo <huhlim@gmail.com>",
    "Michael Feig <feiglab@gmail.com>",
]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/huhlim/cg2all"
exclude = ["cg2all/set*"]

[tool.poetry.scripts]
convert_all2cg = "cg2all.script.convert_all2cg:main"
convert_cg2all = "cg2all.script.convert_cg2all:main"
cryo_em_minimizer = "cg2all.script.cryo_em_minimizer:main"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.3"
dgl = ">=0.9"
e3nn = "^0.5"
ml-collections = "^0.1.1"
numpy = "^1.21"
mdtraj = {git = "https://github.com/huhlim/mdtraj.git"}
se3_transformer = {git = "https://github.com/huhlim/SE3Transformer.git"}

[tool.poetry.group.dev.dependencies]
tqdm = "^4.64.1"
pytorch-lightning = "^1.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
include = '\.pyi?$'
